(temporarily) fix jitter in drawer when list becomes scrollable by forcing scrollbar to always show

--- a/ui/src/style/drawer.less
+++ b/ui/src/style/drawer.less
@@ -23,6 +23,7 @@
  */
 .drawer__content {
   padding: 0 @padding;
+  overflow-y: scroll;
 }
 
 .drawer__close_icon {
